--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,52 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import-normalize;
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;700&display=swap");
+
+* {
+    box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+    /* Typography */
+    --family: "Nunito Sans", sans-serif;
+    --fs-s: 14px;
+    --fs-m: 16px;
+    --fw-light: 300;
+    --fw-normal: 600;
+    --fw-bold: 800;
+
+    /* Other */
+    --radius: 0.5rem;
+}
+
+body[data-theme="dark"] {
+    --color-text: hsl(0, 0%, 100%);
+    --color-bg: hsl(207, 26%, 17%);
+    --color-ui-base: hsl(209, 23%, 22%);
+    --shadow: rgba(245, 245, 245, 0.2) 0 0 8px;
+}
+body[data-theme="light"] {
+    --color-text: hsl(200, 15%, 8%);
+    --color-bg: hsl(0, 0%, 98%);
+    --color-ui-base: hsl(0, 0%, 100%);
+    --shadow: rgba(149, 157, 165, 0.2) 0 8px 24px;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    font-family: var(--family);
+    background-color: var(--color-bg);
+    color: var(--color-text);
+    font-weight: var(--fw-normal);
+    font-size: var(--fs-m);
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+/* Вспомогательные стили */
+div {
+    border: 1px solid gainsboro;
 }
