--- a/src/index.css
+++ b/src/index.css
@@ -118,12 +118,14 @@ body[data-theme="dark"] {
     --color-bg: hsl(207, 26%, 17%);
     --color-ui-base: hsl(209, 23%, 22%);
     --shadow: rgba(245, 245, 245, 0.2) 0 0 8px;
+    --hover: hsl(207, 26%, 17%);
 }
 body[data-theme="light"] {
     --color-text: hsl(200, 15%, 8%);
     --color-bg: hsl(0, 0%, 98%);
     --color-ui-base: hsl(0, 0%, 100%);
     --shadow: rgba(149, 157, 165, 0.2) 0 8px 24px;
+    --hover: hsl(0, 0%, 91%);
 }
 
 body {
